<resources>
    <string name="app_name">ProjetAMIO</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="alerts_header">Alerts</string>
    <string name="send_notifications_title">Allow notifications</string>
    <string name="send_email_title">Allow emails</string>
    <string name="choose_time">Select times</string>
    <string name="weekday_notification_time_title_start">Weekday start at</string>
    <string name="weekday_notification_time_title_end">Weekday end at</string>
    <string name="weekend_notification_time_title_end">Weekend end at</string>
    <string name="weekend_notification_time_title_start">Weekend start at</string>
    <string name="weekday_email_time_title_start">Weekday start</string>
    <string name="weekday_email_time_title_end">Weekday end at</string>
    <string name="weekend_email_time_title_start">Weekend start at</string>
    <string name="weekend_email_time_title_end">Weekend end at</string>
    <string name="email_adress">Email address</string>
</resources>